[package]
name = "bird-looking-glass-proxy"
version = "0.0.2"
edition = "2021"

[dependencies]
actix-web = "3"
toml = "0.4.5"
serde_derive = "1.0.152"
serde = "1.0.152"
futures = "0.3.26"
lazy_static = "1.4.0"
sys-info = "0.9"
rust-shell = "0.2.0"
birdc = "0.2.0"
tokio = { version = "1", features = ["full"] }
clap = "3.0.0"
[profile.release]
lto = true